cmake_minimum_required(VERSION 3.15)
project(cpp)

set(CMAKE_CXX_STANDARD 11)
add_subdirectory(easy/twoSum)
add_subdirectory(easy/deleteNode)
add_subdirectory(easy/megeTwoLists)
add_subdirectory(easy/isPalindrome)
add_subdirectory(easy/hasCycle)
add_subdirectory(easy/isSymmetric)


add_subdirectory(middle/removeNthFromEnd)
add_subdirectory(middle/isValidBST)
add_subdirectory(middle/levelOrder)